--- a/module-3/sml-3-code-along.qmd
+++ b/module-3/sml-3-code-along.qmd
@@ -94,9 +94,8 @@ my_wf <-
 ```{r}
 #| eval: false
 #| echo: true
-fitted_model <- fit(my_wf, data = data_train) # ignore warning for this example
 class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) # this is new
-final_fit <- last_fit(fitted_model, train_test_split, metrics = class_metrics)
+final_fit <- last_fit(my_wf, train_test_split, metrics = class_metrics)
 ```
 
 ## 5. Evaluate accuracy
