--- a/module-1/sml-1-conceptual-overview.qmd
+++ b/module-1/sml-1-conceptual-overview.qmd
@@ -22,27 +22,27 @@ format:
 pacman::p_load(pacman, knitr, tidyverse, readxl)
 ```
 
+# Agenda
+
+-   Purpose and Agenda
+-   Discussion 1
+-   Key Concept: Machine Learning
+-   Discussion 2
+-   Modules Overview
+-   Introduction to the other parts of this module
+
+::: {.notes}
+This is the rough structure used for all four module's conceptual overview presentations.
+:::
+
 # Purpose and Agenda
 
-## Purpose
+## Purpose (All Modules!)
 
 Machine learning is increasingly prevalent in our lives---and in educational contexts. Its role in educational research and practice is growing, albeit with some challenges and even controversy. These modules are designed to familiarize you with supervised machine learning and its applications in STEM education research. Throughout the module, we'll explore four key questions that correspond to the focus of each of the four modules. By the end, you will have a deep understanding of the key characteristics of supervised machine learning and how to implement supervised machine learning workflows in R and Python.
 
 ::: {.notes}
 This is from the overview of the module -- it is jsut a high-level overview of the topic.
-:::
-
-## Agenda
-
--   Purpose and Agenda
--   Discussion 1
--   Key Concept: Machine Learning
--   Modules Overview
--   Discussion 2
--   Introduction to the other parts of this module
-
-::: {.notes}
-This is the rough structure used for all four module's conceptual overview presentations.
 :::
 
 # Discussion 1
@@ -51,7 +51,7 @@ This is the rough structure used for all four module's conceptual overview prese
 The discussions that follow are optional, but they can be really rich.
 :::
 
-:::{.panel-tabset}
+::: panel-tabset
 
 ## Getting Started
 
@@ -63,10 +63,12 @@ This is really just to get people talking - low stakes! Look for ideas related t
 
 ## Digging Deeper
 
-- Is there a specific use case of machine learning in which you are especially interested?
+- Is there a specific use case of machine learning in which you are especially interested? Consider the data and purpose.
 
 ::: {.notes}
 Like the above, this is meant to elicit thoughts on SML - try to draw those out, or point out cases of unsupervised ML or regression and try to contrast those.
+:::
+
 :::
 
 # Key Concept #1
@@ -175,9 +177,7 @@ Do you want to say something about one or several variables' relations with an o
 
 **Traditional inferential statistics may be best**
 
-## Examples of machine learning in STEM Ed Research
-
-### Example 
+## Example of machine learning in STEM Edu Research
 
 **Combining best practices in assessment with supervised ML**
 
@@ -186,7 +186,22 @@ Do you want to say something about one or several variables' relations with an o
 -   Carrying out a careful process of qualitative coding (and the establishment of validity and interrater reliability) of students' written constructed responses
 -   Training a supervised ML algorithm in advance of being able to **scale up** their coding to a larger number of responses
 
-**We'll read this later, in module 3!**
+# Discussion 2
+
+::: panel-tabset
+
+## Reflecting
+
+-   When might you use SML, in general?
+
+## Applying
+
+-   Think back to the use case you mentioned earlier. How does (or could) SML be an appropriate technique to use?
+:::
+
+::: {.notes}
+This is meant to elicit thoughts from learners on SML, now that we are beginning to develop a language. Learners may mention research questions that sound like they could be answered using traditional inferential methods - lean into those discussions and be open to the possibility that interesting questions do *not* require SML, and use these conversations to try to shape inferential (i.e., those answerable with regression models and their extensions) questions into predictive (i.e., those answerable with SML) ones.
+:::
 
 # Modules Overview
 
@@ -221,28 +236,13 @@ A key point to make here is that each lab introduces a tension/issue that is res
 :::
 
 
-# Discussion 2
+# Other parts of this module
+
+## Overview
 
 ::: panel-tabset
 
-## Reflecting
-
--   When might you use SML?
-
-## Applying
-
--   What is a research question you could ask that could be approached with SML?
-:::
-
-::: {.notes}
-This is meant to elicit thoughts from learners on SML, now that we are beginning to develop a language. Learners may mention research questions that sound like they could be answered using traditional inferential methods - lean into those discussions and be open to the possibility that interesting questions do *not* require SML, and use these conversations to try to shape inferential (i.e., those answerable with regression models and their extensions) questions into predictive (i.e., those answerable with SML) ones.
-:::
-
-# Introduction to the other parts of this module
-
-::: panel-tabset
-
-## Readings
+### Readings
 
 **Please see `sml-1-readings.qmd`**
 
@@ -252,23 +252,25 @@ This is meant to elicit thoughts from learners on SML, now that we are beginning
 
 > Zong, C., & Davis, A. (2022). Modeling university retention and graduation rates using IPEDS. Journal of College Student Retention: Research, Theory & Practice, 15210251221074379.
 
-## Case Study
+### Case Study
 
 **Please see `sml-1-case-study.qmd`**
 
--   Building a prediction model for graduate rates using data from the National Center for Education Statistics.
+-   Building a prediction model for graduate rates using data from National Center for Education Statistics data --- IPEDS< specifically
 -   We'll use not only the same _data_ but also the same _model_ in two modes - inferential regression modeling and predicitive SML, seeing how the key is in how we use the model, not the model type
 -   Work with peers to complete this, reading the text, following links to resources (and the reading), and then completing the required 👉 Your Turn ⤵ tasks
 -   A key is available, but we strongly encourage you to use it only at the end to check your work, or if you are completely stuck and have tried our recommended troubleshooting steps: https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit
 
-## Badge
+### Badge
 
-**Please see `sml-badge.qmd`**
+**Please see `sml-1-badge.qmd`**
 
 -   Involves applying what you have done through this point in the module to a) extending our model and b) reflecting and planning, after which you will knit and submit your work by publishing to Posit Cloud.
 :::
 
-# Troubleshooting and setup
+## Troubleshooting and setup
+
+## Troubleshooting
 
 -   Please view [this Google doc](https://docs.google.com/document/d/14Jc-KG3m5k1BvyKWqw7KmDD21IugU5nV5edfJkZyspY/edit)
 -   Change default settings: Tools -\> Global Settings -\> Workspace -\> DO NOT restore workspace
